--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   sublink:
-    image: jaaksi/sublink
+    image: leuxinovo/sublink
     container_name: sublink
     ports:
       - 8000:5000
